--- a/index.html
+++ b/index.html
@@ -19,16 +19,23 @@
       <div id="navbar" class="navbar">
         <span class="text-primary">
           <h1 class="logo"><i class="fas fa-book-open"></i> EdgeLedger</h1>
-          <nav>
-            <ul>
-              <li><a href="#home">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#cases">Cases</a></li>
-              <li><a href="#blog">Blog</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </nav>
         </span>
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#cases">Cases</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="content">
+        <h1>The Sky Is The Limit</h1>
+        <p>We provide world class financial assistance</p>
+        <a href="#about" class="btn"
+          ><i class="fas fa-chevron-right"></i>Read More</a
+        >
       </div>
     </header>
   </body>
