Add inner pages

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 repudiandae natus reprehenderit praesentium?
               </p>
 
-              <a href="#" class="btn btn-outline">
+              <a href="blog.html" class="btn btn-outline">
                 <i class="fas fa-chevron"></i>
                 Read Our Blog</a
               >
