--- a/post.html
+++ b/post.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="hero blog">
-      <div id="navbar" class="navbar">
+      <div id="navbar" class="navbar top">
         <span class="text-primary">
           <h1 class="logo"><i class="fas fa-book-open"></i> EdgeLedger</h1>
         </span>
@@ -66,5 +66,26 @@
       </div>
       <p>Copyright &copy; 2020 - EdgeLedger</p>
     </footer>
+    <script>
+      const navbar = document.getElementById("navbar");
+      let scrolled = false;
+
+      window.onscroll = function () {
+        if (window.pageYOffset > 100) {
+          navbar.classList.remove("top");
+          if (!scrolled) {
+            navbar.style.transform = "translateY(-70px)";
+          }
+
+          setTimeout(() => {
+            navbar.style.transform = "translateY(0)";
+            scrolled = true;
+          }, 200);
+        } else {
+          navbar.classList.add("top");
+          scrolled = false;
+        }
+      };
+    </script>
   </body>
 </html>
